--- a/arcgis_github_oauth/index.html
+++ b/arcgis_github_oauth/index.html
@@ -14,7 +14,7 @@
         appId: "kJb5xoxjKAHsY2ag",
         popup: false,
         flowType: "auto",
-        redirectUri: "https://YOUR_GITHUB_USERNAME.github.io/arcgis_github_oauth/login-complete.html"
+        redirectUri: "https://urbanizedev.github.io/arcgis_github_oauth/login-complete.html"
       });
 
       esriId.registerOAuthInfos([info]);
