--- a/arcgis_github_oauth/login-complete.html
+++ b/arcgis_github_oauth/login-complete.html
@@ -13,7 +13,7 @@
         window.location.href = "dashboard.html?user=" + encodeURIComponent(user);
       } else {
         alert("Login failed");
-        window.location.href = "login.html";
+        window.location.href = "index.html";
       }
     });
   </script>
