--- a/arcgis_github_oauth/index.html
+++ b/arcgis_github_oauth/index.html
@@ -11,7 +11,7 @@
   <script>
     require(["esri/IdentityManager", "esri/arcgis/OAuthInfo"], function(esriId, OAuthInfo) {
       const info = new OAuthInfo({
-        appId: "kJb5xoxjKAHsY2ag",
+        appId: "kJb5xoqjKAHsY2ag",
         popup: false,
         flowType: "auto",
         redirectUri: "https://urbanizedev.github.io/arcgis_github_oauth/arcgis_github_oauth/login-complete.html"
