--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>ArcGIS OAuth Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://js.arcgis.com/4.29/"></script>
-  </head>
-  <body>
-    <h1>ArcGIS Login</h1>
-    <button id="loginBtn">Login</button>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ArcGIS OAuth Redirect</title>
+</head>
+<body>
+  <h2>ArcGIS OAuth Redirect</h2>
+  <div id="status">Authenticating...</div>
 
-    <script>
-      require([
-        "esri/identity/OAuthInfo",
-        "esri/identity/IdentityManager"
-      ], function(OAuthInfo, esriId) {
-        const info = new OAuthInfo({
-          appId: "kJb5xoqjKAHsY2ag",
-          popup: false,
-          flowType: "auto",
-          redirectUri: "https://urbanizedev.github.io/arcgis_github_oauth/login-complete.html"
-        });
-        esriId.registerOAuthInfos([info]);
+  <script>
+    const clientId = "kJb5xoqjKAHsY2ag"; // Replace with your actual ArcGIS client ID
+    const redirectUri = window.location.origin + window.location.pathname;
 
-        document.getElementById("loginBtn").addEventListener("click", function () {
-          esriId.getCredential("https://www.arcgis.com/sharing");
-        });
-      });
-    </script>
-  </body>
+    function initiateOAuth() {
+      const url = new URL("https://www.arcgis.com/sharing/rest/oauth2/authorize");
+      url.searchParams.set("client_id", clientId);
+      url.searchParams.set("response_type", "token");
+      url.searchParams.set("redirect_uri", redirectUri);
+      url.searchParams.set("expiration", "20160"); // 14 days
+
+      // Redirect to ArcGIS login
+      window.location.href = url.toString();
+    }
+
+    function getTokenFromHash() {
+      const hash = window.location.hash.substring(1);
+      const params = new URLSearchParams(hash);
+      const token = params.get("access_token");
+      const expiresIn = params.get("expires_in");
+
+      if (token) {
+        localStorage.setItem("arcgis_access_token", token);
+        document.getElementById("status").innerText =
+          "Access token saved! You are now authenticated with ArcGIS.";
+        console.log("Access Token:", token);
+      } else {
+        initiateOAuth(); // Start OAuth if no token
+      }
+    }
+
+    window.onload = getTokenFromHash;
+  </script>
+</body>
 </html>
