--- a/index.html
+++ b/index.html
@@ -2,44 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ArcGIS OAuth Redirect</title>
+  <title>ArcGIS OAuth Map</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
+  <style>
+    html, body, #viewDiv {
+      padding: 0;
+      margin: 0;
+      height: 100%;
+      width: 100%;
+    }
+  </style>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css"/>
+  <script src="https://js.arcgis.com/4.29/"></script>
 </head>
 <body>
-  <h2>ArcGIS OAuth Redirect</h2>
-  <div id="status">Authenticating...</div>
+  <div id="viewDiv"></div>
 
   <script>
-    const clientId = "kJb5xoqjKAHsY2ag"; // Replace with your actual ArcGIS client ID
+    const clientId = "kJb5xoqjKAHsY2ag"; // ✅ your ArcGIS app client ID
     const redirectUri = window.location.origin + window.location.pathname;
 
-    function initiateOAuth() {
-      const url = new URL("https://www.arcgis.com/sharing/rest/oauth2/authorize");
-      url.searchParams.set("client_id", clientId);
-      url.searchParams.set("response_type", "token");
-      url.searchParams.set("redirect_uri", redirectUri);
-      url.searchParams.set("expiration", "20160"); // 14 days
-
-      // Redirect to ArcGIS login
-      window.location.href = url.toString();
-    }
-
-    function getTokenFromHash() {
+    function handleAuth() {
       const hash = window.location.hash.substring(1);
       const params = new URLSearchParams(hash);
       const token = params.get("access_token");
-      const expiresIn = params.get("expires_in");
 
       if (token) {
-        localStorage.setItem("arcgis_access_token", token);
-        document.getElementById("status").innerText =
-          "Access token saved! You are now authenticated with ArcGIS.";
-        console.log("Access Token:", token);
-      } else {
-        initiateOAuth(); // Start OAuth if no token
+        localStorage.setItem("arcgis_token", token);
+        window.history.replaceState(null, "", window.location.pathname); // clean URL
+        return token;
       }
+
+      const savedToken = localStorage.getItem("arcgis_token");
+      if (savedToken) return savedToken;
+
+      // Redirect to ArcGIS login
+      const authUrl = new URL("https://www.arcgis.com/sharing/rest/oauth2/authorize");
+      authUrl.searchParams.set("client_id", clientId);
+      authUrl.searchParams.set("response_type", "token");
+      authUrl.searchParams.set("redirect_uri", redirectUri);
+      authUrl.searchParams.set("expiration", "20160"); // 14 days
+
+      window.location.href = authUrl.toString();
     }
 
-    window.onload = getTokenFromHash;
+    const accessToken = handleAuth();
+
+    require([
+      "esri/Map",
+      "esri/views/MapView",
+      "esri/WebMap",
+      "esri/config"
+    ], (Map, MapView, WebMap, esriConfig) => {
+      // Attach token to every request
+      esriConfig.request.interceptors.push({
+        before: (params) => {
+          params.requestOptions.query = {
+            ...params.requestOptions.query,
+            token: accessToken
+          };
+        }
+      });
+
+      const webmap = new WebMap({
+        portalItem: {
+          id: "kJb5xoqjKAHsY2ag" // ✅ your WebMap ID
+        }
+      });
+
+      const view = new MapView({
+        container: "viewDiv",
+        map: webmap,
+        zoom: 10
+      });
+    });
   </script>
 </body>
 </html>
