--- a/index.html
+++ b/index.html
@@ -2,32 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ArcGIS OAuth Map + User Info</title>
+  <title>ArcGIS Map Selector</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-    }
-    #info {
-      padding: 1rem;
-      background: #f4f4f4;
       font-family: sans-serif;
     }
+    #top {
+      padding: 1rem;
+      background: #f4f4f4;
+    }
     #viewDiv {
-      height: calc(100% - 150px);
+      height: calc(100% - 160px);
       width: 100%;
     }
+    #mapSelect {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
   </style>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css"/>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css" />
   <script src="https://js.arcgis.com/4.29/"></script>
 </head>
 <body>
-
-  <div id="info">
-    <h3>User Info</h3>
-    <div id="user-info">Loading...</div>
+  <div id="top">
+    <div><strong>Logged in as:</strong> <span id="user-info">Loading...</span></div>
+    <div>
+      <label for="mapSelect"><strong>Select a WebMap:</strong></label>
+      <select id="mapSelect">
+        <option>Loading maps...</option>
+      </select>
+    </div>
   </div>
 
   <div id="viewDiv"></div>
@@ -61,52 +70,67 @@
 
     const accessToken = handleAuth();
 
-    // 🔹 Get user info from ArcGIS Online
-    async function fetchUserInfo(token) {
-      const res = await fetch(`https://www.arcgis.com/sharing/rest/community/self?f=json&token=${token}`);
-      const data = await res.json();
-      document.getElementById("user-info").innerHTML = `
-        <strong>Full Name:</strong> ${data.fullName || "N/A"}<br>
-        <strong>Username:</strong> ${data.username}<br>
-        <strong>Email:</strong> ${data.email || "N/A"}<br>
-        <strong>Role:</strong> ${data.role}<br>
-        <strong>Org ID:</strong> ${data.orgId}<br>
-        <strong>Groups:</strong> <ul>${
-          (data.groups || []).map(group => `<li>${group.title}</li>`).join('')
-        }</ul>
-      `;
+    // Fetch user info + their web maps
+    async function fetchUserMaps(token) {
+      const userRes = await fetch(`https://www.arcgis.com/sharing/rest/community/self?f=json&token=${token}`);
+      const userData = await userRes.json();
+      document.getElementById("user-info").innerText = `${userData.fullName} (${userData.username})`;
+
+      const contentRes = await fetch(`https://www.arcgis.com/sharing/rest/content/users/${userData.username}?f=json&token=${token}`);
+      const contentData = await contentRes.json();
+      const webMaps = contentData.items.filter(item => item.type === "Web Map");
+
+      const select = document.getElementById("mapSelect");
+      select.innerHTML = ""; // Clear existing
+
+      if (webMaps.length === 0) {
+        select.innerHTML = "<option>No WebMaps found.</option>";
+        return;
+      }
+
+      for (const map of webMaps) {
+        const option = document.createElement("option");
+        option.value = map.id;
+        option.text = map.title;
+        select.appendChild(option);
+      }
+
+      // Load the first map
+      loadWebMap(webMaps[0].id);
     }
 
-    fetchUserInfo(accessToken);
+    function loadWebMap(webmapId) {
+      require([
+        "esri/WebMap",
+        "esri/views/MapView",
+        "esri/config"
+      ], (WebMap, MapView, esriConfig) => {
+        esriConfig.request.interceptors.push({
+          before: (params) => {
+            params.requestOptions.query = {
+              ...params.requestOptions.query,
+              token: accessToken
+            };
+          }
+        });
 
-    // 🔹 Load your secured WebMap
-    require([
-      "esri/Map",
-      "esri/views/MapView",
-      "esri/WebMap",
-      "esri/config"
-    ], (Map, MapView, WebMap, esriConfig) => {
-      esriConfig.request.interceptors.push({
-        before: (params) => {
-          params.requestOptions.query = {
-            ...params.requestOptions.query,
-            token: accessToken
-          };
-        }
-      });
+        const webmap = new WebMap({
+          portalItem: { id: webmapId }
+        });
 
-      const webmap = new WebMap({
-        portalItem: {
-          id: "kJb5xoqjKAHsY2ag"
-        }
+        const view = new MapView({
+          container: "viewDiv",
+          map: webmap,
+          zoom: 10
+        });
       });
+    }
 
-      const view = new MapView({
-        container: "viewDiv",
-        map: webmap,
-        zoom: 10
-      });
+    document.getElementById("mapSelect").addEventListener("change", (e) => {
+      loadWebMap(e.target.value);
     });
+
+    fetchUserMaps(accessToken);
   </script>
 </body>
 </html>
