--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <script>
     const clientId = "kJb5xoqjKAHsY2ag";
-    const redirectUri = window.location.origin + window.location.pathname;
+    const redirectUri = "https://urbanize.maps.arcgis.com/apps/webappviewer/index.html?id=f6354f9fc1024799bc92dde2a0f10ae4";
 
     const hash = window.location.hash.substring(1);
     const params = new URLSearchParams(hash);
