--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <option value="">-- Choose a client --</option>
     <option value="Dealmap|kJb5xoqjKAHsY2ag|https://urbanize.maps.arcgis.com/apps/webappviewer/index.html?id=f6354f9fc1024799bc92dde2a0f10ae4">DealMap</option>
     <option value="Georgia 2024|rfNcWeqHUfLt8kA9|https://urbtx.maps.arcgis.com/apps/webappviewer/index.html?id=09dbef59d03c47a28337e56a3125052a">Georgia 2024</option>
+    <option value="South Carolina 2025|rfNcWeqHUfLt8kA9|https://urbtx.maps.arcgis.com/apps/webappviewer/index.html?id=d67f996ede5744b388116b3bcf137fdf">2025 South Carolina LIHTC Map</option>
+     <option value="Virginia 2025|rfNcWeqHUfLt8kA9|https://urbtx.maps.arcgis.com/apps/webappviewer/index.html?id=2f36456652274acab7f570f016913b6c">2024 Virginia LIHTC Map - Doran Co</option>
     <!-- Add more clients here -->
   </select>
 
